ci: use YAML folded style for line splitting

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,12 +29,12 @@ jobs:
         with:
           dotnet-version: 8.0.x
 
-      - run: |
-          dotnet publish Lip/Lip.csproj \
-            -c Release \
-            -o bin \
-            -r ${{ matrix.runtime }} \
-            -p:OptimizationPreference=Size \
+      - run: >
+          dotnet publish Lip/Lip.csproj
+            -c Release
+            -o bin
+            -r ${{ matrix.runtime }}
+            -p:OptimizationPreference=Size
             -p:PublishAot=true
 
       - uses: actions/upload-artifact@v4
