--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,14 +9,14 @@ jobs:
       fail-fast: false
       matrix:
         include:
+          - runtime: linux-arm64
+            runs-on: ubuntu-24.04
+          - runtime: linux-x64
+            runs-on: ubuntu-latest
           - runtime: osx-arm64
             runs-on: macos-latest
           - runtime: osx-x64
             runs-on: macos-latest
-          - runtime: linux-arm64
-            runs-on: ubuntu-latest
-          - runtime: linux-x64
-            runs-on: ubuntu-latest
           - runtime: win-arm64
             runs-on: windows-latest
           - runtime: win-x64
@@ -33,9 +33,9 @@ jobs:
         run: |
           sudo dpkg --add-architecture arm64
           sudo bash -c 'cat > /etc/apt/sources.list.d/arm64.list <<EOF
-          deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports/ jammy main restricted
-          deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports/ jammy-updates main restricted
-          deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports/ jammy-backports main restricted universe multiverse
+          deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports/ noble main restricted
+          deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports/ noble-updates main restricted
+          deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports/ noble-backports main restricted universe multiverse
           EOF'
           sudo sed -i -e 's/deb http/deb [arch=amd64] http/g' /etc/apt/sources.list
           sudo sed -i -e 's/deb mirror/deb [arch=amd64] mirror/g' /etc/apt/sources.list
