ci: set assembly name to lip

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,6 +47,7 @@ jobs:
           -c Release
           -o bin
           -r ${{ matrix.runtime }}
+          -p:AssemblyName=lip
           -p:OptimizationPreference=Size
           -p:PublishAot=true
 
