--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,14 @@
 on:
-  push:
   pull_request:
+    paths:
+      - .github/workflows/build.yml
+      - Lip/**
+      - Lip.Tests/**
+  push:
+    paths:
+      - .github/workflows/build.yml
+      - Lip/**
+      - Lip.Tests/**
   workflow_dispatch:
 
 jobs:
