--- a/Lip/Lip.csproj
+++ b/Lip/Lip.csproj
@@ -8,4 +8,8 @@
     <AssemblyName>lip</AssemblyName>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Semver" Version="3.0.0" />
+  </ItemGroup>
+
 </Project>
