--- a/Lip/Lip.csproj
+++ b/Lip/Lip.csproj
@@ -8,6 +8,9 @@
 
   <ItemGroup>
     <PackageReference Include="Semver" Version="3.0.0" />
+    <PackageReference Include="Serilog" Version="4.2.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
+    <PackageReference Include="TestableIO.System.IO.Abstractions" Version="21.2.1" />
   </ItemGroup>
 
 </Project>
