--- a/Lip/Lip.csproj
+++ b/Lip/Lip.csproj
@@ -7,9 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.0" />
     <PackageReference Include="Semver" Version="3.0.0" />
-    <PackageReference Include="Serilog" Version="4.2.0" />
-    <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
     <PackageReference Include="TestableIO.System.IO.Abstractions" Version="21.2.1" />
   </ItemGroup>
 
