--- a/Lip/Lip.csproj
+++ b/Lip/Lip.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DotNet.Glob" Version="3.1.3" />
     <PackageReference Include="Downloader" Version="3.3.1" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.0" />
     <PackageReference Include="Semver" Version="3.0.0" />
