--- a/Lip/Lip.csproj
+++ b/Lip/Lip.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="DotNet.Glob" Version="3.1.3" />
     <PackageReference Include="Downloader" Version="3.3.1" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.0" />
+    <PackageReference Include="Scriban" Version="5.12.1" />
     <PackageReference Include="Semver" Version="3.0.0" />
     <PackageReference Include="TestableIO.System.IO.Abstractions" Version="21.2.1" />
   </ItemGroup>
