feat: add more strict validation

--- a/Lip/Lip.csproj
+++ b/Lip/Lip.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.0" />
     <PackageReference Include="Scriban" Version="5.12.1" />
     <PackageReference Include="Semver" Version="3.0.0" />
+    <PackageReference Include="SharpCompress" Version="0.38.0" />
     <PackageReference Include="TestableIO.System.IO.Abstractions" Version="21.2.1" />
   </ItemGroup>
 
