--- a/Lip.Context/Lip.Context.csproj
+++ b/Lip.Context/Lip.Context.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Flurl" Version="4.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.1" />
     <PackageReference Include="TestableIO.System.IO.Abstractions" Version="21.2.1" />
   </ItemGroup>
