--- a/Lip/Lip.csproj
+++ b/Lip/Lip.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="DotNet.Glob" Version="3.1.3" />
+    <PackageReference Include="Flurl" Version="4.0.0" />
     <PackageReference Include="Scriban" Version="5.12.1" />
     <PackageReference Include="Semver" Version="3.0.0" />
     <PackageReference Include="SharpCompress" Version="0.38.0" />
