--- a/Lip/Lip.csproj
+++ b/Lip/Lip.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="C-Sharp-Algorithms" Version="1.0.0" />
     <PackageReference Include="DotNet.Glob" Version="3.1.3" />
     <PackageReference Include="Flurl" Version="4.0.0" />
     <PackageReference Include="Scriban" Version="5.12.1" />
