chore: Add exclusions for vs and use lf as eol

--- a/.gitattributes
+++ b/.gitattributes
@@ -2,7 +2,7 @@
 
 # Auto detect text files and perform LF normalization
 *          text=auto
-
+*          eol=lf
 #
 # The above will handle all files NOT found below
 #
