--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -101,8 +101,9 @@ jobs:
           --configuration Release
           --output bin
           --runtime ${{ matrix.runtime }}
-          -p:OptimizationPreference=Size
-          -p:PublishAot=true
+          --self-contained true
+          -p:DebugType=None
+          -p:PublishSingleFile=true
 
       - uses: actions/upload-artifact@v4
         with:
