--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,8 +20,8 @@ jobs:
       fail-fast: false
       matrix:
         project:
-          - Lip
           - Lip.Context
+          - Lip.Core
         include:
           - runtime: linux-arm64
             runs-on: ubuntu-22.04
@@ -54,14 +54,7 @@ jobs:
       fail-fast: false
       matrix:
         project:
-          - Lip.CLI
-        runtime:
-          - linux-arm64
-          - linux-x64
-          - osx-arm64
-          - osx-x64
-          - win-arm64
-          - win-x64
+          - Lip
         include:
           - runtime: linux-arm64
             runs-on: ubuntu-22.04
