--- a/Lip/Lip.csproj
+++ b/Lip/Lip.csproj
@@ -1,22 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AssemblyName>lip</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="C-Sharp-Algorithms" Version="1.0.0" />
-    <PackageReference Include="DotNet.Glob" Version="3.1.3" />
-    <PackageReference Include="Flurl" Version="4.0.0" />
-    <PackageReference Include="Scriban" Version="5.12.1" />
-    <PackageReference Include="Semver" Version="3.0.0" />
-    <PackageReference Include="SharpCompress" Version="0.38.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Lip.Context\Lip.Context.csproj" />
+    <ProjectReference Include="..\Lip.Core\Lip.Core.csproj" />
   </ItemGroup>
 
 </Project>
