ci: fix check style

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -130,8 +130,8 @@ jobs:
         project:
           - Lip
           - Lip.Tests
-          - Lip.CLI
           - Lip.Context
+          - Lip.Core
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
