--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
         project:
           - Lip.Context
           - Lip.Core
-        runtimes:
+        runtime:
           - linux-arm64
           - linux-x64
           - osx-arm64
@@ -62,7 +62,7 @@ jobs:
       matrix:
         project:
           - Lip
-        runtimes:
+        runtime:
           - linux-arm64
           - linux-x64
           - osx-arm64
