--- a/Lip.Context/Lip.Context.csproj
+++ b/Lip.Context/Lip.Context.csproj
@@ -12,7 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="CliWrap" Version="3.8.1" />
-    <PackageReference Include="Flurl.Http" Version="4.0.2" />
+    <PackageReference Include="Downloader" Version="3.3.3" />
   </ItemGroup>
 
 </Project>
