--- a/Lip/Lip.csproj
+++ b/Lip/Lip.csproj
@@ -10,6 +10,11 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Lip.Core\Lip.Core.csproj" />
+    <ProjectReference Include="..\Lip.Context\Lip.Context.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Spectre.Console" Version="0.49.2-preview.0.76" />
   </ItemGroup>
 
 </Project>
