--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,7 @@ jobs:
       fail-fast: false
       matrix:
         project:
-          - Lip
+          - Lip.CLI
         runtime:
           - linux-arm64
           - linux-x64
@@ -33,8 +33,6 @@ jobs:
             runs-on: windows-latest
           - runtime: win-x64
             runs-on: windows-latest
-          - project: Lip
-            project-subname: cli
     runs-on: ${{ matrix.runs-on }}
     steps:
       - uses: actions/checkout@v4
@@ -66,7 +64,7 @@ jobs:
 
       - uses: actions/upload-artifact@v4
         with:
-          name: ${{ github.event.repository.name }}-${{ matrix.project-subname }}-${{ matrix.runtime }}-${{ github.sha }}
+          name: ${{ github.event.repository.name }}-${{ matrix.project }}-${{ matrix.runtime }}-${{ github.sha }}
           path: bin/
 
   update-release-notes:
