--- a/Lip.Core/Lip.Core.csproj
+++ b/Lip.Core/Lip.Core.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="C-Sharp-Algorithms" Version="1.0.0" />
     <PackageReference Include="DotNet.Glob" Version="3.1.3" />
     <PackageReference Include="Flurl" Version="4.0.0" />
+    <PackageReference Include="Flurl.Http" Version="4.0.2" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.1" />
     <PackageReference Include="Scriban" Version="5.12.1" />
     <PackageReference Include="Semver" Version="3.0.0" />
