feat: implement module and semver package of golang/x/mod

--- a/Lip.Core/Lip.Core.csproj
+++ b/Lip.Core/Lip.Core.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Lip.Migration\Lip.Migration.csproj" />
+    <ProjectReference Include="..\Golang.Org.X.Mod\Golang.Org.X.Mod.csproj" />
   </ItemGroup>
 
   <ItemGroup>
