--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,6 +44,8 @@ jobs:
             runs-on: windows-latest
           - runtime: win-x64
             runs-on: windows-latest
+    permissions:
+      contents: read
     runs-on: ${{ matrix.runs-on }}
     steps:
       - uses: actions/checkout@v4
@@ -84,6 +86,8 @@ jobs:
             runs-on: windows-latest
           - runtime: win-x64
             runs-on: windows-latest
+    permissions:
+      contents: read
     runs-on: ${{ matrix.runs-on }}
     steps:
       - uses: actions/checkout@v4
@@ -132,6 +136,8 @@ jobs:
           - Lip.Core.Tests
           - Lip.Migration
           - Lip.Migration.Tests
+    permissions:
+      contents: read
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -157,6 +163,8 @@ jobs:
           - macos-latest
           - ubuntu-latest
           - windows-latest
+    permissions:
+      contents: read
     runs-on: ${{ matrix.runs-on }}
     steps:
       - uses: actions/checkout@v4
