--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,6 +33,8 @@ jobs:
             runs-on: windows-latest
           - runtime: win-x64
             runs-on: windows-latest
+    permissions:
+      contents: read
     runs-on: ${{ matrix.runs-on }}
     steps:
       - uses: actions/checkout@v4
