--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -118,10 +118,25 @@ jobs:
           -p:PublishSingleFile=true
           -p:Version=0.0.0
 
+      - if: startsWith(matrix.runtime, 'win') == true
+        name: Build installer
+        run: >
+          dotnet publish Lip.Installer
+          --configuration Release
+          --output bin-installer
+          --runtime ${{ matrix.runtime }}
+
       - uses: actions/upload-artifact@v4
         with:
           name: ${{ github.event.repository.name }}-${{ matrix.project }}-${{ matrix.runtime }}-${{ github.sha }}
           path: bin/
+
+      - if: startsWith(matrix.runtime, 'win') == true
+        name: Upload installer
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ github.event.repository.name }}-Lip.Installer-${{ matrix.runtime }}-${{ github.sha }}
+          path: bin-installer/
 
   check-style:
     strategy:
