--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -118,21 +118,42 @@ jobs:
           -p:PublishSingleFile=true
           -p:Version=0.0.0
 
-      - if: startsWith(matrix.runtime, 'win') == true
-        name: Build installer
+      - uses: actions/upload-artifact@v4
+        with:
+          name: ${{ github.event.repository.name }}-${{ matrix.project }}-${{ matrix.runtime }}-${{ github.sha }}
+          path: bin/
+
+  build-installer:
+    needs: build-app
+    strategy:
+      matrix:
+        include:
+          - runtime: win-arm64
+            runs-on: windows-latest
+          - runtime: win-x64
+            runs-on: windows-latest
+    runs-on: ${{ matrix.runs-on }}
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: ${{ env.DOTNET_VERSION }}
+
+      - name: Download cli artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: ${{ github.event.repository.name }}-${{ matrix.project }}-Lip.CLI-${{ github.sha }}
+          path: bin/
+
+      - name: Build installer
         run: >
           dotnet build Lip.Installer
           --configuration Release
           --output bin-installer
           --runtime ${{ matrix.runtime }}
 
-      - uses: actions/upload-artifact@v4
-        with:
-          name: ${{ github.event.repository.name }}-${{ matrix.project }}-${{ matrix.runtime }}-${{ github.sha }}
-          path: bin/
-
-      - if: startsWith(matrix.runtime, 'win') == true
-        name: Upload installer
+      - name: Upload installer
         uses: actions/upload-artifact@v4
         with:
           name: ${{ github.event.repository.name }}-Lip.Installer-${{ matrix.runtime }}-${{ github.sha }}
