--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -143,7 +143,7 @@ jobs:
       - name: Download cli artifact
         uses: actions/download-artifact@v4
         with:
-          name: ${{ github.event.repository.name }}-${{ matrix.project }}-Lip.CLI-${{ github.sha }}
+          name: ${{ github.event.repository.name }}-Lip.CLI-${{ matrix.runtime }}-${{ github.sha }}
           path: bin/
 
       - name: Build installer
