--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -93,6 +93,22 @@ jobs:
       - uses: actions/setup-dotnet@v4
         with:
           dotnet-version: ${{ env.DOTNET_VERSION }}
+          
+      - id: get-version
+        uses: frabert/replace-string-action@v2
+        with:
+          pattern: '^v'
+          string: ${{ github.event.release.tag_name }}
+          replace-with: ''
+
+      # Prevent versions like 1.1.1-rc.1
+      - name: Modify version of installer
+        run: |
+          $inputString = "${{ steps.get-version.outputs.replaced }}"
+          if ($inputString -match "^(.*?)-") { $result = $matches[1] } else { $result = $inputString }
+          (Get-Content Package.wxs) -replace '0\.0\.0\.0', "$result.0" | Set-Content Package.wxs
+        shell: pwsh
+        working-directory: Lip.Installer
 
       - name: Download cli artifact
         uses: actions/download-artifact@v4
