fix: fix installer arch

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -128,9 +128,9 @@ jobs:
     strategy:
       matrix:
         include:
-          - runtime: win-arm64
+          - runtime: arm64
             runs-on: windows-latest
-          - runtime: win-x64
+          - runtime: x64
             runs-on: windows-latest
     runs-on: ${{ matrix.runs-on }}
     steps:
@@ -143,7 +143,7 @@ jobs:
       - name: Download cli artifact
         uses: actions/download-artifact@v4
         with:
-          name: ${{ github.event.repository.name }}-Lip.CLI-${{ matrix.runtime }}-${{ github.sha }}
+          name: ${{ github.event.repository.name }}-Lip.CLI-win-${{ matrix.runtime }}-${{ github.sha }}
           path: bin/
 
       - name: Build installer
@@ -151,12 +151,12 @@ jobs:
           dotnet build Lip.Installer
           --configuration Release
           --output bin-installer
-          --runtime ${{ matrix.runtime }}
+          --p:Platform=${{ matrix.runtime }}
 
       - name: Upload installer
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ github.event.repository.name }}-Lip.Installer-${{ matrix.runtime }}-${{ github.sha }}
+          name: ${{ github.event.repository.name }}-Lip.Installer-win-${{ matrix.runtime }}-${{ github.sha }}
           path: bin-installer/
 
   check-style:
