--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,9 +59,9 @@ jobs:
       - id: get-version
         uses: frabert/replace-string-action@v2
         with:
-          pattern: '^v'
+          pattern: "^v"
           string: ${{ github.event.release.tag_name }}
-          replace-with: ''
+          replace-with: ""
 
       - run: >
           dotnet publish ${{ matrix.project }}
@@ -76,8 +76,8 @@ jobs:
         with:
           name: ${{ github.event.repository.name }}-${{ matrix.project }}-${{ matrix.runtime }}-${{ github.sha }}
           path: bin/
-          
-  build-installer:
+
+  build-windows-installer:
     needs: build-app
     strategy:
       matrix:
@@ -93,13 +93,13 @@ jobs:
       - uses: actions/setup-dotnet@v4
         with:
           dotnet-version: ${{ env.DOTNET_VERSION }}
-          
+
       - id: get-version
         uses: frabert/replace-string-action@v2
         with:
-          pattern: '^v'
+          pattern: "^v"
           string: ${{ github.event.release.tag_name }}
-          replace-with: ''
+          replace-with: ""
 
       # Prevent versions like 1.1.1-rc.1
       - name: Modify version of installer
@@ -127,8 +127,8 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: ${{ github.event.repository.name }}-Lip.Installer-win-${{ matrix.runtime }}-${{ github.sha }}
-          path: bin-installer/  
-        
+          path: bin-installer/
+
   update-release-notes:
     permissions:
       contents: write
@@ -143,7 +143,7 @@ jobs:
         with:
           body: ${{ steps.extract-release-notes.outputs.release_notes }}
 
-  upload-to-release:
+  upload-to-release-linux:
     needs:
       - build-app
       - update-release-notes
@@ -158,6 +158,39 @@ jobs:
         runtime:
           - linux-arm64
           - linux-x64
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/download-artifact@v4
+        with:
+          name: ${{ github.event.repository.name }}-${{ matrix.project }}-${{ matrix.runtime }}-${{ github.sha }}
+          path: artifact/
+
+      - run: |
+          cp CHANGELOG.md COPYING README.md artifact/
+
+      - run: |
+          tar -czvf ../${{ github.event.repository.name }}-${{ matrix.runtime }}.tar.gz *
+        working-directory: artifact
+
+      - uses: softprops/action-gh-release@v2
+        with:
+          files: |
+            ${{ github.event.repository.name }}-${{ matrix.runtime }}.tar.gz
+
+  upload-to-release-macos-and-windows:
+    needs:
+      - build-app
+      - update-release-notes
+    permissions:
+      contents: write
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        project:
+          - Lip.CLI
+        runtime:
           - osx-arm64
           - osx-x64
           - win-arm64
@@ -173,55 +206,43 @@ jobs:
       - run: |
           cp CHANGELOG.md COPYING README.md artifact/
 
-      - if: startsWith(matrix.runtime, 'linux') == false
-        run: |
+      - run: |
           zip -r ../${{ github.event.repository.name }}-${{ matrix.runtime }}.zip *
         working-directory: artifact
 
-      - if: startsWith(matrix.runtime, 'linux') == true
-        run: |
-          tar -czvf ../${{ github.event.repository.name }}-${{ matrix.runtime }}.tar.gz *
-        working-directory: artifact
-
-      - if: startsWith(matrix.runtime, 'linux') == false
-        uses: softprops/action-gh-release@v2
+      - uses: softprops/action-gh-release@v2
         with:
           files: |
             ${{ github.event.repository.name }}-${{ matrix.runtime }}.zip
 
-      - if: startsWith(matrix.runtime, 'linux') == true
-        uses: softprops/action-gh-release@v2
-        with:
-          files: |
-            ${{ github.event.repository.name }}-${{ matrix.runtime }}.tar.gz
-
-  upload-installer-to-release:
-    needs: build-installer
+  upload-to-release-windows-installer:
+    needs: build-windows-installer
     permissions:
       contents: write
     runs-on: ubuntu-latest
     strategy:
-      matrix: 
+      matrix:
+        lang:
+          - en-US
+          - zh-CN
         runtime:
           - win-arm64
           - win-x64
     steps:
       - uses: actions/checkout@v4
-        
+
       - name: Download installer
         uses: actions/download-artifact@v4
         with:
           name: ${{ github.event.repository.name }}-Lip.Installer-${{ matrix.runtime }}-${{ github.sha }}
           path: artifact-installer/
-          
+
       - name: Rename installer
         run: |
-          mv artifact-installer/en-US/Lip.Installer.msi artifact-installer/lip-${{ matrix.runtime }}-en-US.msi
-          mv artifact-installer/zh-CN/Lip.Installer.msi artifact-installer/lip-${{ matrix.runtime }}-zh-CN.msi
+          mv artifact-installer/${{ matrix.lang }}/Lip.Installer.msi artifact-installer/${{ github.event.repository.name }}-${{ matrix.runtime }}-${{ matrix.lang }}.msi
 
       - name: Upload installer to release
         uses: softprops/action-gh-release@v2
         with:
           files: |
-            artifact-installer/lip-${{ matrix.runtime }}-en-US.msi
-            artifact-installer/lip-${{ matrix.runtime }}-zh-CN.msi
+            artifact-installer/${{ github.event.repository.name }}-${{ matrix.runtime }}-${{ matrix.lang }}.msi
