--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -77,7 +77,7 @@ jobs:
           name: ${{ github.event.repository.name }}-${{ matrix.project }}-${{ matrix.runtime }}-${{ github.sha }}
           path: bin/
 
-  build-windows-installer:
+  build-cli-windows-installer:
     needs: build-app
     strategy:
       matrix:
@@ -158,6 +158,9 @@ jobs:
         runtime:
           - linux-arm64
           - linux-x64
+        include:
+          - project: Lip.CLI
+            sub-name: cli
     steps:
       - uses: actions/checkout@v4
 
@@ -170,13 +173,13 @@ jobs:
           cp CHANGELOG.md COPYING README.md artifact/
 
       - run: |
-          tar -czvf ../${{ github.event.repository.name }}-${{ matrix.runtime }}.tar.gz *
+          tar -czvf ../${{ github.event.repository.name }}-${{ matrix.sub-name }}-${{ matrix.runtime }}.tar.gz *
         working-directory: artifact
 
       - uses: softprops/action-gh-release@v2
         with:
           files: |
-            ${{ github.event.repository.name }}-${{ matrix.runtime }}.tar.gz
+            ${{ github.event.repository.name }}-${{ matrix.sub-name }}-${{ matrix.runtime }}.tar.gz
 
   upload-to-release-macos-and-windows:
     needs:
@@ -195,6 +198,9 @@ jobs:
           - osx-x64
           - win-arm64
           - win-x64
+        include:
+          - project: Lip.CLI
+            sub-name: cli
     steps:
       - uses: actions/checkout@v4
 
@@ -207,16 +213,16 @@ jobs:
           cp CHANGELOG.md COPYING README.md artifact/
 
       - run: |
-          zip -r ../${{ github.event.repository.name }}-${{ matrix.runtime }}.zip *
+          zip -r ../${{ github.event.repository.name }}-${{ matrix.sub-name }}-${{ matrix.runtime }}.zip *
         working-directory: artifact
 
       - uses: softprops/action-gh-release@v2
         with:
           files: |
-            ${{ github.event.repository.name }}-${{ matrix.runtime }}.zip
+            ${{ github.event.repository.name }}-${{ matrix.sub-name }}-${{ matrix.runtime }}.zip
 
   upload-to-release-windows-installer:
-    needs: build-windows-installer
+    needs: build-cli-windows-installer
     permissions:
       contents: write
     runs-on: ubuntu-latest
@@ -231,18 +237,15 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Download installer
-        uses: actions/download-artifact@v4
+      - uses: actions/download-artifact@v4
         with:
           name: ${{ github.event.repository.name }}-Lip.Installer-${{ matrix.runtime }}-${{ github.sha }}
           path: artifact-installer/
 
-      - name: Rename installer
-        run: |
+      - run: |
           mv artifact-installer/${{ matrix.lang }}/Lip.Installer.msi artifact-installer/${{ github.event.repository.name }}-${{ matrix.runtime }}-${{ matrix.lang }}.msi
 
-      - name: Upload installer to release
-        uses: softprops/action-gh-release@v2
+      - uses: softprops/action-gh-release@v2
         with:
           files: |
-            artifact-installer/${{ github.event.repository.name }}-${{ matrix.runtime }}-${{ matrix.lang }}.msi
+            artifact-installer/${{ github.event.repository.name }}-cli-${{ matrix.runtime }}-${{ matrix.lang }}.msi
